# haxmas

./: .gitignore  .nojekyll
beans-cool-api/: .fastdeploy.json  package.json
beans-cool-api/src/: index.ts
christmas-clicker-game/: package-lock.json
christmas-clicker-game/src/app/: globals.css  layout.tsx  page.tsx
christmas-clicker-game/src/components/: JollyOrpheusClick.tsx
day10/: conf.lua  haxmas-day10-codingwithhardik.html  main.lua
day11/src/content/posts/: hackclub.md
day11/src/layouts/: BlogPost.astro
day11/src/pages/: index.astro
day11/src/pages/posts/: [...slug].astro  index.astro
day12/: index.html  main.js  package-lock.json  style.css
day3/: hackclub_day3.f3d  hackclub_day3.stp
day5/: main.py
day5/static/: index.html  main.js
day7/: index.html  script.js  style.css
day8/: main.py
day9/: main.py
haxmas-day-9/: README.md  pyproject.toml
haxmas-day-9/src/haxmas_day_9_hardikgupta2232/: main.py
pcb/: 3D_PCB1_2025-12-14.step
